<resources>
    <string name="app_name">myTimeTable</string>
    <string name="versionCode">v-1.0.0</string>
    <string name="open_drawer">Open drawer</string>
    <string name="close_drawer">Close drawer</string>
    <string name="new_lesson_illustration_desc">An Image Showing aa Tutor standing at the board and some students sitting and listening</string>


    <!-- Label -->
    <string name="basic_label">Basic</string>
    <string name="label_label">Label</string>
    <string name="label_extra_data">Extra Data</string>
    <!-- Label -->

    <!-- Hints -->
    <string name="lesson_title_hint">Course Title…</string>
    <string name="lesson_code_hint">Course Code…</string>
    <string name="place_hint">Place</string>
    <string name="teacher_hint">Teacher or Lecturer…</string>
    <string name="description_hint">Description…</string>
    <!-- Hints -->

    <!--New Lesson-->
    <string name="check_image_desc">An Image Showing when a label is selected</string>
    <string name="day_label">Day</string>
    <string name="from_label">From</string>
    <string name="to_label">To</string>
    <string name="edit_lesson_fab_desc">An Icon that looks like a pen indicating that lesson is editable</string>
    <string name="hi_there_text">Hi There!</string>
    <string name="class_in">You have <b>%s</b> class in %s minutes time.</string>
    <string name="click_to_see_details"><u>Click to see details</u></string>
    <string name="today_label">Today</string>
    <string name="see_all">see all…</string>
    <!--New Lesson-->

    <!--Home-->
    <string name="lesson_duration">%s - %s</string>
    <string name="a_lady_avatar_img_desc">A Lady Avatar</string>
    <string name="no_lesson">You have no class for today 🙂</string>
    <string name="batch_mode_details">When enabled using the save button won\'t exit this screen, allowing you to create add more lessons to a table</string>
    <string name="batch_mode_switch_label">Batch mode</string>
    <string name="default_time">00:00</string>
    <string name="day_hint_text">Day</string>
    <string name="subject_illustration_image_desc">Subject Illustration Image</string>
    <string name="new_timetable_text_label">New Timetable</string>
    <string name="timetable_name_label">Timetable Name</string>
    <string name="timetable_name_hint">Timetable For...</string>
    <string name="btn_continue_text">Continue</string>
    <string name="btn_save_text">Save</string>
    <!--Home-->

    <!--Error messages-->
    <string name="code_input_error">Course code cannot be empty</string>
    <string name="title_input_error">Course title is required</string>
    <string name="description_input_error">Description is required</string>
    <string name="teacher_input_error">Teacher or Lecturer name is required</string>
    <string name="place_input_error">Place is required</string>
    <string name="day_input_error">Day is required</string>
    <string name="from_input_error">Start time is required</string>
    <string name="to_input_error">End time is required</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home_menu_item">Home</string>
    <string name="my_timetables_menu_item">My Timetables</string>
    <string name="add_tag_hint">Add tag</string>
    <string name="btn_up_text">Cancel</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <!--Error messages-->
</resources>