<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/homeContentContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        tools:context=".ui.screens.HomeFragment">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <LinearLayout
                android:id="@+id/homeLayoutGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/defaultWelcomeCard"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/dp_20"
                    app:cardBackgroundColor="@color/primaryLightColor"
                    app:cardCornerRadius="@dimen/dp_10"
                    app:cardElevation="@dimen/dp_14"
                    app:contentPadding="0dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/greeting_card_gradient"
                        android:paddingTop="@dimen/dp_30">

                        <ImageView
                            android:id="@+id/ladyIllustration"
                            android:layout_width="@dimen/dp_80"
                            android:layout_height="@dimen/dp_80"
                            android:layout_marginStart="@dimen/dp_8"
                            android:contentDescription="@string/a_lady_avatar_img_desc"
                            android:scaleType="centerCrop"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:srcCompat="@drawable/ic_girl" />

                        <TextView
                            android:id="@+id/hiThereTextView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/dp_8"
                            android:fontFamily="@font/poppins_medium"
                            android:text="@string/hi_there_text"
                            android:textColor="@color/primaryTextColor"
                            android:textSize="@dimen/sp_16"
                            app:layout_constraintStart_toEndOf="@+id/ladyIllustration"
                            app:layout_constraintTop_toTopOf="@+id/ladyIllustration" />

                        <TextView
                            android:id="@+id/classInTextView"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="@dimen/dp_16"
                            android:fontFamily="@font/poppins"
                            android:text="@string/class_in"
                            android:textColor="@color/primaryTextColor"
                            android:textSize="@dimen/sp_12"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="@+id/hiThereTextView"
                            app:layout_constraintTop_toBottomOf="@+id/hiThereTextView" />

                        <TextView
                            android:id="@+id/textBtnClickToSeeDetails"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/poppins"
                            android:text="@string/click_to_see_details"
                            android:textColor="@color/primaryTextColor"
                            android:textSize="@dimen/sp_10"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="@+id/classInTextView"
                            app:layout_constraintStart_toStartOf="@+id/classInTextView"
                            app:layout_constraintTop_toBottomOf="@+id/classInTextView" />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btnDismiss"
                        style="@style/Widget.MaterialComponents.Button.TextButton"
                        android:layout_width="@dimen/dp_20"
                        android:layout_height="@dimen/dp_20"
                        android:layout_gravity="top|end"
                        android:layout_margin="@dimen/dp_16"
                        android:gravity="end"
                        android:paddingStart="@dimen/dp_8"
                        android:paddingEnd="@dimen/dp_16"
                        android:text=""
                        android:textAlignment="gravity"
                        app:icon="@drawable/ic_close"
                        app:iconGravity="start"
                        app:iconPadding="@dimen/dp_16"
                        app:iconSize="@dimen/dp_16"
                        app:iconTint="@color/primaryTextColor" />
                </com.google.android.material.card.MaterialCardView>

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp_20"
                    android:layout_marginEnd="@dimen/dp_20">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:fontFamily="@font/poppins"
                        android:text="@string/today_label"
                        android:textColor="@color/secondaryTextColor"
                        android:textSize="@dimen/sp_14"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/btnSeeAll"
                        style="@style/Widget.MaterialComponents.Button.TextButton"
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/dp_20"
                        android:layout_gravity="end"
                        android:fontFamily="@font/poppins"
                        android:gravity="end"
                        android:text="@string/see_all"
                        android:textAlignment="gravity"
                        android:textAllCaps="false"
                        android:textColor="@color/primaryDarkColor"
                        android:textColorHint="@color/secondaryTextColor"
                        android:textSize="@dimen/sp_10"
                        android:textStyle="normal" />
                </FrameLayout>

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/todayLessonsRecyclerView"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="@dimen/dp_20"
                        android:layoutAnimation="@anim/layout_animation"
                        android:overScrollMode="never"
                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                        app:layout_behavior="@string/appbar_scrolling_view_behavior"
                        tools:listitem="@layout/item_day_events" />

                    <TextView
                        android:id="@+id/emptyStateText"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="@dimen/dp_20"
                        android:fontFamily="@font/poppins_medium"
                        android:gravity="center_horizontal|center_vertical"
                        android:text="@string/no_lesson"
                        android:textAlignment="gravity"
                        android:textColor="@color/secondaryTextColor"
                        android:textSize="@dimen/sp_18"
                        android:visibility="gone" />
                </FrameLayout>
            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/btnCreateNewTimetable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="@dimen/dp_16"
            android:contentDescription="@string/edit_lesson_fab_desc"
            app:backgroundTint="@color/primaryColor"
            app:elevation="@dimen/dp_14"
            app:srcCompat="@drawable/ic_baseline_add"
            app:tint="@color/primaryTextColor" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>