<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/newTableScreen"
        android:layout_width="match_parent"
        android:fitsSystemWindows="true"
        android:layout_height="match_parent"
        tools:context=".ui.screens.NewTimetableFragment">

        <ImageView
            android:id="@+id/createNewLessonIllustration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:contentDescription="@string/new_lesson_illustration_desc"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/create_lesson_illustration" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            android:scrollbars="none">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/newLessonGuideLine"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintGuide_begin="230dp"
                    app:layout_constraintGuide_end="@dimen/dp_16" />

                <TextView
                    android:id="@+id/labelTextBasic"
                    style="@style/NewLessonLabels"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp_30"
                    android:layout_marginTop="@dimen/dp_18"
                    android:layout_marginEnd="@dimen/dp_30"
                    android:text="@string/timetable_name_label"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/newLessonGuideLine" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/timetableNameTextInputLayout"
                    style="@style/NewLessonsInput"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:hint="@string/timetable_name_hint"
                    app:hintEnabled="true"
                    app:layout_constraintEnd_toEndOf="@+id/labelTextBasic"
                    app:layout_constraintStart_toStartOf="@+id/labelTextBasic"
                    app:layout_constraintTop_toBottomOf="@+id/labelTextBasic"
                    app:startIconDrawable="@drawable/ic_calendar">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/timetableNameInput"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:fontFamily="@font/poppins"
                        android:inputType="text"
                        android:singleLine="true"
                        android:textSize="@dimen/sp_14" />
                </com.google.android.material.textfield.TextInputLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/timetableTagsRecyclerView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_16"
                    android:nestedScrollingEnabled="false"
                    app:layout_constraintEnd_toEndOf="@+id/timetableNameTextInputLayout"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@+id/timetableNameTextInputLayout"
                    app:layout_constraintTop_toBottomOf="@id/timetableNameTextInputLayout"
                    tools:listitem="@layout/item_timetable_tag" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnContinue"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_50"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/btn_continue_text"
                    android:textAllCaps="false"
                    app:cornerRadius="@dimen/dp_16"
                    app:layout_constraintEnd_toEndOf="@+id/timetableNameTextInputLayout"
                    app:layout_constraintStart_toStartOf="@+id/timetableNameTextInputLayout"
                    app:layout_constraintTop_toBottomOf="@+id/timetableTagsRecyclerView" />


            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_16"
            android:layout_marginTop="@dimen/dp_16"
            android:fontFamily="@font/poppins"
            android:text="@string/new_timetable_text_label"
            android:textColor="@color/secondaryTextColor"
            app:backgroundTint="@color/primaryTextColor"
            app:cornerRadius="@dimen/dp_10"
            app:icon="@drawable/ic_chevron_left"
            app:iconTint="@color/secondaryTextColor" />
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>